<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="16dp"
    app:cardCornerRadius="10dp"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tableNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tableNuber"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/main_black"
                android:layout_marginBottom="15dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/orderStatusIcon"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    app:cardCornerRadius="8dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/free_table_color"/>

                <TextView
                    android:id="@+id/orderStatusTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/ready"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/main_black"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="16dp"
            android:orientation="vertical"
            android:gravity="end">

            <TextView
                android:id="@+id/orderNumberTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberSign"
                android:textColor="@color/main_black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:text="@string/exampleTime"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@color/main_black"/>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>