<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.fragments.orders.OrderDetailsFragment">

    <LinearLayout
        android:id="@+id/orderDetailsMainView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:gravity="center"
            android:layout_margin="16dp">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_gravity="start"
                android:src="@drawable/button_arrow_back_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tableNumber"
                android:layout_weight="1"
                android:textColor="@color/main_black"
                android:textStyle="bold"
                android:textSize="17sp" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_gravity="start"
                android:src="@drawable/notification_icon"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_marginTop="6dp">

                <TextView
                    android:id="@+id/orderNumberTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="№"
                    android:textColor="@color/main_black"
                    android:textStyle="bold"
                    android:textSize="17sp"/>

                <TextView
                    android:id="@+id/clientNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client"
                    android:textColor="@color/main_black"
                    android:textStyle="bold"
                    android:textSize="17sp"/>


            </LinearLayout>

            <TextView
                android:id="@+id/timeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="Открыт в "
                android:textSize="17sp"
                android:textStyle="normal"
                android:textColor="@color/main_black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/orderStatusIcon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                app:cardCornerRadius="8dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/free_table_color"/>

            <TextView
                android:id="@+id/orderStatusTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ready"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/main_black"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/readyItemRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/totalSum"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/totalPriceTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="4dp"
                android:text="@string/_720"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="90dp">

            <Button
                android:id="@+id/closeOrderBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/transparent"
                app:cornerRadius="25dp"
                android:padding="16dp"
                android:text="@string/closeOrder"
                android:textSize="17sp"
                android:textColor="@color/main_button_color"
                android:textStyle="normal"
                android:layout_margin="8dp"
                app:strokeColor="@color/main_button_color"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/addItemBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/add"
                android:textSize="17sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:layout_margin="8dp"
                android:backgroundTint="@color/main_button_color"
                app:cornerRadius="25dp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>